--- a/dockers/insec/Dockerfile
+++ b/dockers/insec/Dockerfile
@@ -4,6 +4,6 @@ FROM ubuntu:latest
 RUN apt update && apt install -y tshark jq iputils-ping dnsutils  net-tools iperf tcpdump netcat-traditional curl  iproute2 ethtool iptables nftables
 RUN echo 'net.ipv4.ip_forward=0' >> /etc/sysctl.conf && sysctl -p
 
-RUN apt update && apt install -y python3 python3-pip build-essential cmake libpcap-dev  vim 
+RUN apt update && apt install -y python3 python3-pip build-essential cmake libpcap-dev vim python3-pycryptodome python3-scapy libffi-dev libssl-dev net-tools iproute2 tcpdump && apt clean
 
 WORKDIR /code/insec
